<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- APP -->
    <string name="app_name">Work Time</string>

    <!-- GENERAL -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <!-- GENERAL TIME -->
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>

    <!-- HOME -->
    <string name="home_btn_timeregs">Registrations</string>
    <string name="home_btn_projects">Projects</string>
    <string name="home_btn_preferences">Preferences</string>
    <string name="home_btn_about">About</string>

    <!-- MANAGE PROJECTS -->
    <string name="btn_manage_projects_title">Manage Projects</string>
    <string name="msg_delete_project_confirmation">Do you want to delete this project?</string>
    <string name="msg_delete_project_and_linked_time_registrations_confirmation">Time registrations for this project are found. Do you want to delete all those time registrations and the project or do nothing?</string>
    <string name="lbl_empty_project_list">No projects available yet.</string>
    <string name="btn_projects_delete_all">Delete all</string>
    <string name="btn_projects_do_nothing">Do nothing</string>
    <string name="lbl_project_default">(Default)</string>
    <string name="msg_delete_project_at_least_one_required">You cannot delete this project. At least one is required.</string>

    <!-- DEFUALT PROJECT VALUES DB -->
    <string name="default_project_name">Default Project</string>
    <string name="default_project_comment">This is the default project, created when installing the application.</string>

    <!-- ADD PROJECT -->
    <string name="lbl_add_project_title">Add Project</string>
    <string name="lbl_add_project_name">Project-name:</string>
    <string name="lbl_add_project_comment">Comment:</string>
    <string name="lbl_add_project_make_default_project">Make this project default</string>
    <string name="lbl_project_name_not_unique">This name is already in use. Please choose another one.</string>
    <string name="lbl_project_name_required">The name of the project is a required field!</string>

    <!-- REGISTRATIONS -->
    <string name="lbl_registrations_title">Time Registrations</string>
    <string name="lbl_empty_registration_list">No time registrations available yet.</string>
    <string name="now">Until now...</string>
    <string name="lbl_registrations_project">Project: </string>
    <string name="msg_delete_registration_confirmation">Do you want to delete this time registration?</string>
    <string name="msg_export_not_available">Export is not available</string>
    <string name="msg_export_not_available_detail">You do not have an SD-card or any other external storage possibilities or the storage is read-only.</string>
    <!-- EXPORT -->
    <string name="lbl_registrations_export_title">Export Time Registrations</string>
    <string name="lbl_registrations_export_filename">Filename</string>
    <string name="lbl_registrations_export_filetype">File Type</string>
    <string name="lbl_registrations_export_csv_separator">Separator Value</string>
    <string name="lbl_registrations_export_file_type_TXT">Text (TXT)</string>
    <string name="lbl_registrations_export_file_type_CSV">Comma Seperated Values (CSV)</string>
    <string name="lbl_registrations_export_file_type_chooser_title">Select File Type</string>
    <string name="lbl_registrations_export_csv_separator_comma">Comma (,)</string>
    <string name="lbl_registrations_export_csv_separator_colon">Colon (:)</string>
    <string name="lbl_registrations_export_csv_separator_semicolon">Semicolon (;)</string>
    <string name="lbl_registrations_export_csv_separator_chooser_title">Select File Type</string>
    <string name="lbl_registrations_export_filename_required">The filename is required and should be at least 3 characters</string>
    <string name="msg_registrations_export_saving_to_mail">Exporting time registrations to SD-card</string>
    <!-- EXPORT FILE STRINGS -->
    <string name="lbl_registrations_export_file_txt_start">Start:</string>
    <string name="lbl_registrations_export_file_txt_end">End:</string>
    <string name="lbl_registrations_export_file_txt_project">Project:</string>
    <string name="lbl_registrations_export_file_csv_starttime">Starttime</string>
    <string name="lbl_registrations_export_file_csv_endtime">Endtime</string>
    <string name="lbl_registrations_export_file_csv_startdate">Startdate</string>
    <string name="lbl_registrations_export_file_csv_enddate">Enddate</string>
    <string name="lbl_registrations_export_file_csv_project">Project</string>
    <string name="lbl_registrations_export_file_csv_projectcomment">Project-comment</string>

    <!-- PREFERENCES -->
    <string name="lbl_preferences_title">Preferences</string>
    <string name="pref_export_category_title">Export settings</string>
    <string name="pref_export_time_reg_file_name_title">Export file name</string>
    <string name="pref_export_time_reg_file_name_summary">Define the file name to be used when exporting time regsitrations</string>

    <!-- ABOUT -->
    <string name="lbl_about_title">About</string>
    <string name="lbl_about_project">Project: </string>
    <string name="lbl_about_version_name">Version: </string>
    <string name="lbl_about_version_code">Version code: </string>
    <string name="lbl_about_database_name">Database name: </string>
    <string name="lbl_about_database_version">Database version: </string>
    <string name="lbl_about_website">Website: </string>
    <string name="lbl_about_bug_tracking_website">Bug tracking: </string>

    <!-- WIDGET -->
    <string name="btn_widget_start">START</string>
    <string name="btnw_widget_stop">STOP</string>
    <string name="msg_widget_time_reg_created">Started a new time registration...</string>
    <string name="msg_widget_time_reg_ended">Ended the time registration.</string>
    <string name="msg_widget_create_project_before_time_reg">At least one project is required to create a time registration. You can add a project by launching the application.</string>
    <string name="err_widget_corrupt_data">Corrupt data! Clear the application data!</string>
    <string name="lbl_widget_instructions">Click the widget to open the app.</string>
    <string name="lbl_widget_title_select_project">Select project</string>
    <string name="lbl_widget_starting_new_timeregistration">Starting a new time registration</string>
    <string name="lbl_widget_ending_timeregistration">Ending the time registration</string>

    <!-- DEVELOPMENT -->
    <string name="home_btn_sample_data">SAMPLE DATA</string>
    <string name="home_btn_clear_data">CLEAR DB</string>
</resources>
