<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout style="@style/TitleBar">
        <!--<ImageView style="@style/TitleBarLogo"
            android:src="@drawable/icon" />-->
        <TextView style="@style/TitleBarText" android:text="@string/app_name"/>

        <View style="@style/TitleBarSpring" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="6dip">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button style="@style/HomeButton"
                android:onClick="onTimeRegistrationsClick"
                android:text="@string/home_btn_timeregs"
                android:drawableTop="@drawable/home_btn_timeregistrations"/>
            <Button style="@style/HomeButton"
                android:onClick="onProjectsClick"
                android:text="@string/home_btn_projects"
                android:drawableTop="@drawable/home_btn_projects"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button style="@style/HomeButton"
                android:onClick="onPreferencesClick"
                android:text="@string/home_btn_preferences"
                android:drawableTop="@drawable/home_btn_preferences"/>
            <Button style="@style/HomeButton"
                android:onClick="onAboutClick"
                android:text="@string/home_btn_about"
                android:drawableTop="@drawable/home_btn_about"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                style="@style/HomeButton"
                android:drawableTop="@drawable/home_btn_default"/>
            <ImageView
                style="@style/HomeButton"
                android:drawableTop="@drawable/home_btn_default"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>