<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" android:text="@string/lbl_about_title"/>
    </LinearLayout>


    <ScrollView android:layout_width="fill_parent"
                android:layout_height="fill_parent">
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:orientation="vertical"
                      android:padding="10dip">
            <!-- Project -->
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/lbl_about_project"
                          android:textSize="@dimen/text_size_medium"/>
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:id="@+id/about_project_text"
                          android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>
            <!-- Version name -->
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/lbl_about_version_name"
                          android:textSize="@dimen/text_size_medium"/>
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:id="@+id/about_version_name_text"
                          android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>
            <!-- Version code -->
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/lbl_about_version_code"
                          android:textSize="@dimen/text_size_medium"/>
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:id="@+id/about_version_code_text"
                          android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>
            <!-- Database name -->
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/lbl_about_database_name"
                          android:textSize="@dimen/text_size_medium"/>
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:id="@+id/about_database_name_text"
                          android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>
            <!-- Database version -->
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/lbl_about_database_version"
                          android:textSize="@dimen/text_size_medium"/>
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:id="@+id/about_database_version_text"
                          android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>
            <!-- Website -->

            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/lbl_about_website"
                          android:textSize="@dimen/text_size_medium"/>
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:id="@+id/about_website_text"
                          android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>
            <!-- BugTracking website -->
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:text="@string/lbl_about_bug_tracking_website"
                          android:textSize="@dimen/text_size_medium"/>
                <TextView android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
                          android:id="@+id/about_bug_tracking_website_text"
                          android:textSize="@dimen/text_size_medium"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
